0.5.0
- Feature: Added Russian translation by Nickolas A. Shadrin (#334)
- Improved the manual (#620)
- Change: Switch the description field in the FE event editor from RTE to TEXTAREA (#709)
- Change: Events with a maximal number of 0 vacancies should be considered to not require registration (#703)
- Feature: Added a countdown function (#425)
- Change: Hide payment-related fields from the registration form if the event doesn't have a price (#691, #692)
- Change: Moved the TCE value checking stuff to the seminar class (#605)
- Change: Speed up the back-end modules with caching (#670, #672)
- Change: Make the sorting order of events in the BE configurable (#517)
- Change: In the list view, use "register now" as link text even if the user is not logged in yet (#616)
- Feature: Allow to select the price in the registration form (#551, #676)
- Feature: CSV export of events from the BE (#548)
- Fix: If the field "additional participants" is hidden, no registration is possible (#510)
- Fix: The validator for the method of payment is missing in step 2 of the registration (#660)
- Fix: The label for the allowed methods of payment is not displayed (#662)
- Fix: Config check warning in mod1 and mod2 in about any folder (#592)
- Change: Move the "allow multiple registrations" and "needs registration" checkboxes from the date records to the topic records (#651)
- Change: Change FE display for price = 0 (#390)
- Change: Remove "times and places" from the list view (#652)
- Fix: Problem with creation of new event records (#648)
- Change: Allow to show the subtitle in the list view (#647, #693)
- Fix: mod2: escape the & to &amp; in the delete icon links (#624)
- Change: Removed the "This feature is new" message from the config check (#388)
- Feature: CSV-export of registrations from the BE in mod2 (#525)
- Change: Lower the TYPO3 version requirement to 3.7 (#631)
- Change: Add two additional price fields to the event record (#549)