@@ -1,4 +1,5 @@
 0.5.0
+- Fix: E-mails are empty if a HTML template is selected via flexforms (#710)
 - Feature: Added Russian translation by Nickolas A. Shadrin (#334)
 - Improved the manual (#620)
 - Change: Switch the description field in the FE event editor from RTE to TEXTAREA (#709)
